apps/base/hermes-agent/route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: hermes-agent-route
spec:
  parentRefs:
  - name: gateway
    namespace: network
    sectionName: https
  hostnames:
  - "hermes.${domain_name}"
  rules:
    - backendRefs:
        - name: hermes-agent-svc
          port: 80
